# ez-sdr

./: .gitignore  ANCHORED_SUMMARY.md  AUTONOMOUS_DAEMON_FINAL_STATUS.md  AUTONOMOUS_SESSION.md  CLAUDE.md  CODEBASE_REVIEW_2026_07.md  Cargo.toml  DAEMON_SESSION_COMPLETE.md  NIGHT_WORK.md  README.md  TIMER_STATE.txt  ez_sdr_config.json  timer.py  to_be_reviewed.md
.claude/: day_shift_start  night_shift_start
dump1090/: .gitignore  Cargo.toml
dump1090/src/: adaptive.rs  convert.rs  cpr.rs  crc.rs  demod.rs  fifo.rs  icao_filter.rs  lib.rs  main.rs  mode_ac.rs  mode_s.rs  net_io.rs  stats.rs  track.rs  util.rs
dump1090/src/sdr/: hackrf.rs  ifile.rs  mod.rs  rtlsdr.rs  soapy.rs
dump1090/starch/compat/: compat.h
ez-backend/: Cargo.toml
ez-backend/src/: main.rs  source_worker.rs  state.rs
ez-electron/: package-lock.json  package.json
ez-electron/src/: app.js  index.html  main.js  preload.js  style.css
ez-gui/: Cargo.toml  ez_sdr_bookmarks.json  ez_sdr_config.json
ez-gui/src/: adsb_decoder.rs  adsb_panel.rs  ai_panel.rs  airport_db.rs  antenna_checklist.rs  app.rs  audio_output.rs  bookmarks.rs  config.rs  database.rs  demod.rs  discord.rs  discord_panel.rs  howto_panel.rs  main.rs  mqtt.rs  recorder_panel.rs  satellite_panel.rs  scanner.rs  scheduler.rs  sdr_panel.rs  source_manager.rs  spectrum.rs  theme.rs  tle_engine.rs  tutorial.rs  user_level.rs  web_remote.html  web_remote.rs
graphify-out/: .graphify_labels.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
satdump/: Cargo.toml
satdump/legacy_src/src-core/dsp/io/: nng_sink.h
satdump/legacy_src/src-core/libs/jpeg/: jdatasrc.c
satdump/src/: cli.rs  image.rs  lib.rs  main.rs  pipeline.rs  products.rs  projection.rs
satdump/src/common/: ccsds.rs  codings.rs  mod.rs
satdump/src/dsp/: clock_recovery.rs  fft.rs  filter.rs  mod.rs  modulation.rs  resampling.rs
satdump/src/dsp/base/: block.rs  buffer.rs  mod.rs  stream.rs
satdump/src/instrument/: mod.rs
satdump/src/source/: file.rs  mod.rs  rtlsdr.rs  soapy.rs
sdrpp/: Cargo.toml
sdrpp/src/: config.rs  core.rs  lib.rs  main.rs  module.rs  server.rs  signal_path.rs
sdrpp/src/decoder/: mod.rs  radio.rs
sdrpp/src/dsp/: audio.rs  demod.rs  fft.rs  filter.rs  mod.rs  resampling.rs
sdrpp/src/sink/: audio.rs  mod.rs
sdrpp/src/source/: file.rs  mod.rs  network.rs  rtl_sdr.rs
