[package]
name = "dump1090"
version = "0.1.0"
edition = "2021"

[lib]
name = "dump1090"
path = "src/lib.rs"

[[bin]]
name = "dump1090"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
libc = "0.2"
ctrlc = "3"

[features]
default = []
rtlsdr = []
hackrf = []
soapy = []
