[package]
name = "ez-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ez-backend"
path = "src/main.rs"

[dependencies]
dump1090 = { path = "../dump1090" }
sdrpp = { path = "../sdrpp" }
satdump = { path = "../satdump" }

# WebSocket server
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tungstenite = "0.24"

# DSP / math
num-complex = "0.4"
rustfft = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime / channels
crossbeam-channel = "0.5"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Time
chrono = "0.4"

# CLI args
clap = { version = "4", features = ["derive"] }

# Misc
anyhow = "1"
thiserror = "1"
