[package]
name = "satdump"
version = "0.1.0"
edition = "2021"

[lib]
name = "satdump"
path = "src/lib.rs"

[[bin]]
name = "satdump"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
rustfft = "6"
realfft = "3"
num-complex = "0.4"
image = "0.25"
serde = { version = "1", features = ["derive"] }
hound = "3.5"
serde_json = "1"
crossbeam-channel = "0.5"
libc = "0.2"
nng = "1.0"

[dependencies.rtlsdr]
version = "0.1"
optional = true

[dependencies.soapysdr]
version = "0.3"
optional = true

[features]
default = ["rtlsdr"]
rtlsdr = ["dep:rtlsdr"]
soapy = ["dep:soapysdr"]
