[package]
name = "sdrpp"
version = "0.1.0"
edition = "2021"

[lib]
name = "sdrpp"
path = "src/lib.rs"

[[bin]]
name = "sdrpp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
rustfft = "6"
realfft = "3"
num-complex = "0.4"
cpal = "0.15"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
libc = "0.2"
ctrlc = "3"

[dependencies.rtlsdr]
version = "0.1.4"
optional = true

[dependencies.rtlsdr_sys]
version = "1.1.2"
optional = true

[dependencies.soapysdr]
version = "0.3"
optional = true

[features]
default = ["rtlsdr"]
rtlsdr = ["dep:rtlsdr", "dep:rtlsdr_sys"]
soapy = ["dep:soapysdr"]
